Remove escape key delay

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,9 @@ set-option -g allow-rename off
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# remove wait for escape characters 
+set -s escape-time 0
+
 # http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 ######################
 ### DESIGN CHANGES ###
